# quant

./: .gitignore  README.md  app.py  cli.py  fetch_stocks.py  pyproject.toml
.claude/: settings.local.json
components/: __init__.py  backtest_page.py  events_feed.py  portfolio.py  screener.py  shared.py  sidebar.py  ticker_view.py  tickers_page.py  trade_log.py
quant/: __init__.py  auth.py  backtest.py  db.py  events.py  formula.py  metrics.py  models.py  mytt.py  oplog.py  prices.py  strategies.py  tickers.py  trades.py
quant/sources/: __init__.py  cn.py  us.py
